--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: ruby
 rvm:
   - 1.9.3
+  - 1.9.2
+  - jruby-18mode
+  - jruby-19mode
+  - 1.8.7
 
 after_script:
   - bundle exec rake spec
